--- a/styles.css
+++ b/styles.css
@@ -33,3 +33,27 @@
 .warning::before {
     content: "⚠️";
 }
+
+.container {
+    padding-top: 3%;
+}
+
+.repo {
+    padding-bottom: 50px;
+}
+
+.txnote {
+    color: #9b4dca;
+    padding-bottom: 10px;
+}
+
+.response {
+    padding: 20px;
+    border: 1px solid #9b4dca;
+    word-wrap: break-word;
+    min-height: 94px;
+}
+
+.abi {
+    height: 256px;
+}
